--- a/src/modules/armor-finder/armor-finder-style.sass
+++ b/src/modules/armor-finder/armor-finder-style.sass
@@ -7,14 +7,19 @@
 	> .ui-grid
 		flex-grow: 1
 
-	.row
-		display: block
-
 	.params
-		display: flex
+		.limits	strong
+			flex-grow: 1
 
-		.limits .row
-			display: flex
+		.modifiers
+			flex-wrap: wrap
+			flex-direction: row
 
-			strong
+			.column
 				flex-grow: 1
+				display: flex
+				flex-direction: column
+
+				.row
+					span
+						flex-grow: 1
