[weapon-finder] Restored and reworked functionality.

--- a/src/modules/weapon-finder/weapon-finder-view.jade
+++ b/src/modules/weapon-finder/weapon-finder-view.jade
@@ -1,55 +1,72 @@
 #WeaponFinder
 	.params
 		fieldset
-			legend Limits
+			legend
+				span(title="Stats to use when looking at weapon requirements and calculating ATK bonuses.")
+					| Stats
+				label
+					span &nbsp;(
+					input(type="checkbox" ng-model="params.usePlayers")
+					span use player's)
+
 			.limits
+				label.row(ng-repeat="name in statArray")
+					span {{name | statName}}:
+					input(
+						type="number" ng-model="$parent.params.reqLimits[$index]" min=8 max=99
+						ng-disabled="params.usePlayers"
+					)
+
+		fieldset
+			legend Offense importance
+			.modifiers.atk
+				.column
+					label.row(ng-repeat="mod in [0, 1, 2, 3]")
+						span {{atkNames[mod]}}:
+						input(type="number" ng-model="$parent.params.modifiers.atk[mod]")
+				//
+					.column
+						label.row(ng-repeat="mod in [4, 5, 6, 7]")
+							span {{atkNames[mod]}}:
+							input(type="number" ng-model="$parent.params.modifiers.atk[mod]")
+
+		fieldset
+			legend Defense importance
+			.modifiers.def
+				.column
+					label.row(ng-repeat="mod in [0, 1, 2, 3]")
+						span {{defNames[mod]}}:
+						input(type="number" ng-model="$parent.params.modifiers.def[mod]")
+				//
+					.column
+						label.row(ng-repeat="mod in [4, 5, 6, 7]")
+							span {{defNames[mod]}}:
+							input(type="number" ng-model="$parent.params.modifiers.def[mod]")
+
+		fieldset
+			legend Miscellaneous
+			.misc
 				.row
-					label(ng-repeat="name in reqLimitArray")
-						span {{name | statName}}:
-						input(type="number" ng-model="$parent.params.reqLimits[name]" min=8 max=99)
-
-
-	//
-		table.params
-			tr.limits
-				th.left Limits:
-
-				td
-					button(ng-click="copyStatsToReqs()" title="Use current player stats.")
-						img(src="/app/content/menu-icons/pc.png")
-
-			tr.importance
-				th.left Importance:
-
-				td
-					label
-						input(type="checkbox" ng-model="params.useDps" title="Look at DPS instead of ATK when calculating scores.")
-						| Use DPS
-
-					label(ng-repeat="name in statArray")
-						| {{name}}:
-						input(type="number" ng-model="$parent.params.modifiers[name]")
-
-			tr.misc
-				th.left Misc.:
-				td
 					label
 						input(type="checkbox" ng-model="params.includeUpgrades")
-						| Include available upgrades
+						span Include available upgrades
 
-					label(title="Attack type to use for calculating damage-per-stamina.")
-						| DPS attack:
-						select(
-							ng-model="params.dpsCalcMove"
-							ng-options="dpsCalcOptions.indexOf(label) as label for label in dpsCalcOptions"
-						)
+				.row
+					label(title="Check to sort by damage-per-stamina before sorting by ATK, and choose which attack's DPS to use.")
+						input(type="checkbox" ng-model="params.useDps")
+						span DPS attack:
+					select(
+						ng-model="params.dpsCalcMove"
+						ng-options="dpsCalcOptions.indexOf(label) as label for label in dpsCalcOptions"
+						ng-disabled="!params.useDps"
+					)
 
-		button(ng-click="findWeapons()")
-			| Find
-			select(
-				ng-click="$event.stopPropagation()"
-				ng-model="params"
-				ng-options="paramSet as paramSetNames[paramSets.indexOf(paramSet)] for paramSet in paramSets"
-			)
+	button.row(ng-click="findWeapons()")
+		| Find and sort
+		select(
+			ng-click="$event.stopPropagation()"
+			ng-model="params"
+			ng-options="paramSet as paramSetNames[paramSets.indexOf(paramSet)] for paramSet in paramSets"
+		)
 
 	div(ui-grid-auto-resize ui-grid="gridOptions")
