--- a/src/style/theme/global.sass
+++ b/src/style/theme/global.sass
@@ -13,5 +13,14 @@ h4
 
 
 .ui-grid
-	font-family: "Arigal", sans-serif
+	font-family: "Arial", sans-serif
 	font-size: small
+
+
+label
+	span
+		& + input, & + select
+			margin-left: $spacing
+
+	& + input, & + select
+		margin-left: $spacing
