--- a/src/style/theme/layout.sass
+++ b/src/style/theme/layout.sass
@@ -11,7 +11,7 @@ main
 	border-radius: $border-radius
 	background-image: url('/app/content/content-background.png')
 	color: $color-black
-	text-align: justify
+	text-align: left
 	background-color: #f7f7f9
 	padding: $spacing * 2
 	border: $main-border
