[weapon-finder] Fixed: Stat overrides not working. [tracker] Added Catacombs and Demon Ruins.

--- a/src/modules/weapon-finder/weapon-finder-view.jade
+++ b/src/modules/weapon-finder/weapon-finder-view.jade
@@ -13,7 +13,7 @@
 				label.row(ng-repeat="name in statArray")
 					span {{name | statName}}:
 					input(
-						type="number" ng-model="$parent.params.reqLimits[$index]" min=8 max=99
+						type="number" ng-model="$parent.params.stats[$index]" min=8 max=99
 						ng-disabled="params.usePlayers"
 					)
 
